# SwiftBots

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  __main__.py  create_app.py  create_plugin.py  dockerguide.txt  main.py  mypy.ini  poetry.toml  pyproject.toml  requirements.txt  ruff.toml  upbot.py
controllers/: admin_panel.py  gpt_ai.py  test.py
docs/: README.md  models.md  todos.txt
examples/: chat_bot_example.py  new_ui.py  telegram_bot_example.py  vkontakte_bot_example.py
helper/: __main__.py  getlogs.py  out.txt  starthelper.py  upbot.py
logs/: logs_2020_07_27__14_58_11.txt
plugins/: BaseServices.py  Ping.py  base_services.py
resources/: commands.txt  data.json  logs.txt  static_keyboard.json
src/: apimanager.py  botbase.py  communicator.py  config.py  controller.py  cronmanager.py  cronstart.py  doonline.py  keys.py  listener.py  logger.py  msgsender.py  pluginmanager.py  viewsmanager.py  vkview.py
swiftbots/: __init__.py  __main__.py  admin_utils.py  bots.py  bots_application.py  chats.py  communicators.py  controllers.py  core.py  database_connection_providers.py  functions.py  listeners.py  loggers.py  message_handlers.py  runners.py  swift_bots_app.py  tasks.py  types.py  user_utils.py  utils.py  views.py
templates/: __main__.py.template  config.template  default_app_file.py.template  default_plugin_file.py.template  superapp.py  superplugin.py  superview.py
tests/: example.py  test_basic_view.py  test_bot_tasks.py  test_chat_handlers.py  test_chat_view.py  test_components.py  (+1 more)
(+202 files in other folders)
