[project]
name = "swiftbots"
version = "0.4.2"
description = "Python asynchronous web framework for rapid any-level bots development"
readme = "docs/README.md"
requires-python = ">=3.9.0"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "ruff>=0.11.2",
]
